--- a/abjad-icmc-2016-workshop-proposal.tex
+++ b/abjad-icmc-2016-workshop-proposal.tex
@@ -28,7 +28,7 @@ Abjad is an open-source software system designed to help composers build scores 
 In the context of the primary themes of ICMC 2016 --- ``Is the sky the limit?'' --- the principle architects of Abjad propose to lead a hands-on workshop to introduce algorithmic composition in Abjad. Topics to be covered during the workshop include: instantiating and engraving notes, rests, chords; using the primary features of the Python programming language to model complex and nested rhythms; leveraging  Abjad's powerful iteration and mutation libraries to make large-scale changes to a score;  
 and introducing the ways composers can take advantage of open-source best practices developed in the Python community.
 
-Abjad is a mature, fully-featured system for algorithmic composition and formalized score control. Because of this we are able to work flexibly with ICMC conference organizers as to the duration of this workshop. We have given both 45-minute and three-hour versions of similar workshops before. So we leave the duration of this proposal open and we invite conference organizers to suggest a a duration for the workshop that best fits the conference schedule.
+Abjad is a mature, fully-featured system for algorithmic composition and formalized score control. Because of this we are able to work flexibly with ICMC conference organizers as to the duration of this workshop. We have given both 45-minute and three-hour versions of similar workshops before. So we leave the duration of this proposal open and we invite conference organizers to suggest a duration for the workshop that best fits the conference schedule.
 
 When reviewing this proposal please reference the topics \textbf{algorithmic composition} and \textbf{composition systems and techniques}.
 
